// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UnlockedOverlay should render with default props 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <UnlockedOverlay
    code="abcdefg"
    cost={20}
    rewardCurrency="GBP"
    rewardValue={10}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <ForwardRef
          resizeMode="contain"
          source={
            Object {
              "uri": "https://res.cloudinary.com/yu-life/image/upload/c_fit,h_60,w_200/v1/reward/logo/abcdefg_3x.png",
            }
          }
          style={
            Object {
              "height": 30,
              "width": 100,
            }
          }
        />,
        <YuText
          bold={true}
          style={
            Object {
              "color": "rgb(51,51,51)",
              "fontSize": 30,
              "marginBottom": 8,
              "marginTop": 28,
            }
          }
        >
          £10 voucher
        </YuText>,
        <YuText
          style={
            Object {
              "color": "rgb(51,51,51)",
              "fontSize": 28,
            }
          }
        >
          yucoin x 20
        </YuText>,
      ],
      "style": Object {
        "alignItems": "flex-start",
        "backgroundColor": "#FFFFFF",
        "flexDirection": "column",
        "height": 300,
        "justifyContent": "flex-start",
        "opacity": 0.92,
        "paddingLeft": 30,
        "paddingTop": 40,
        "width": 310,
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "resizeMode": "contain",
          "source": Object {
            "uri": "https://res.cloudinary.com/yu-life/image/upload/c_fit,h_60,w_200/v1/reward/logo/abcdefg_3x.png",
          },
          "style": Object {
            "height": 30,
            "width": 100,
          },
        },
        "ref": null,
        "rendered": null,
        "type": Object {
          "$$typeof": Symbol(react.forward_ref),
          "cacheControl": Object {
            "cacheOnly": "cacheOnly",
            "immutable": "immutable",
            "web": "web",
          },
          "defaultProps": Object {
            "resizeMode": "cover",
          },
          "displayName": "FastImage",
          "preload": [Function],
          "priority": Object {
            "high": "high",
            "low": "low",
            "normal": "normal",
          },
          "propTypes": Object {
            "accessibilityActions": [Function],
            "accessibilityComponentType": [Function],
            "accessibilityElementsHidden": [Function],
            "accessibilityHint": [Function],
            "accessibilityIgnoresInvertColors": [Function],
            "accessibilityLabel": [Function],
            "accessibilityLiveRegion": [Function],
            "accessibilityRole": [Function],
            "accessibilityStates": [Function],
            "accessibilityTraits": [Function],
            "accessibilityViewIsModal": [Function],
            "accessible": [Function],
            "collapsable": [Function],
            "fallback": [Function],
            "hitSlop": [Function],
            "importantForAccessibility": [Function],
            "nativeID": [Function],
            "needsOffscreenAlphaCompositing": [Function],
            "onAccessibilityAction": [Function],
            "onAccessibilityTap": [Function],
            "onError": [Function],
            "onLayout": [Function],
            "onLoad": [Function],
            "onLoadEnd": [Function],
            "onLoadStart": [Function],
            "onMagicTap": [Function],
            "onMoveShouldSetResponder": [Function],
            "onMoveShouldSetResponderCapture": [Function],
            "onProgress": [Function],
            "onResponderGrant": [Function],
            "onResponderMove": [Function],
            "onResponderReject": [Function],
            "onResponderRelease": [Function],
            "onResponderTerminate": [Function],
            "onResponderTerminationRequest": [Function],
            "onStartShouldSetResponder": [Function],
            "onStartShouldSetResponderCapture": [Function],
            "pointerEvents": [Function],
            "removeClippedSubviews": [Function],
            "renderToHardwareTextureAndroid": [Function],
            "shouldRasterizeIOS": [Function],
            "source": [Function],
            "style": [Function],
            "testID": [Function],
            "tintColor": [Function],
          },
          "render": [Function],
          "resizeMode": Object {
            "center": "center",
            "contain": "contain",
            "cover": "cover",
            "stretch": "stretch",
          },
        },
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "bold": true,
          "children": "£10 voucher",
          "style": Object {
            "color": "rgb(51,51,51)",
            "fontSize": 30,
            "marginBottom": 8,
            "marginTop": 28,
          },
        },
        "ref": null,
        "rendered": "£10 voucher",
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": "yucoin x 20",
          "style": Object {
            "color": "rgb(51,51,51)",
            "fontSize": 28,
          },
        },
        "ref": null,
        "rendered": "yucoin x 20",
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <ForwardRef
            resizeMode="contain"
            source={
              Object {
                "uri": "https://res.cloudinary.com/yu-life/image/upload/c_fit,h_60,w_200/v1/reward/logo/abcdefg_3x.png",
              }
            }
            style={
              Object {
                "height": 30,
                "width": 100,
              }
            }
          />,
          <YuText
            bold={true}
            style={
              Object {
                "color": "rgb(51,51,51)",
                "fontSize": 30,
                "marginBottom": 8,
                "marginTop": 28,
              }
            }
          >
            £10 voucher
          </YuText>,
          <YuText
            style={
              Object {
                "color": "rgb(51,51,51)",
                "fontSize": 28,
              }
            }
          >
            yucoin x 20
          </YuText>,
        ],
        "style": Object {
          "alignItems": "flex-start",
          "backgroundColor": "#FFFFFF",
          "flexDirection": "column",
          "height": 300,
          "justifyContent": "flex-start",
          "opacity": 0.92,
          "paddingLeft": 30,
          "paddingTop": 40,
          "width": 310,
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "resizeMode": "contain",
            "source": Object {
              "uri": "https://res.cloudinary.com/yu-life/image/upload/c_fit,h_60,w_200/v1/reward/logo/abcdefg_3x.png",
            },
            "style": Object {
              "height": 30,
              "width": 100,
            },
          },
          "ref": null,
          "rendered": null,
          "type": Object {
            "$$typeof": Symbol(react.forward_ref),
            "cacheControl": Object {
              "cacheOnly": "cacheOnly",
              "immutable": "immutable",
              "web": "web",
            },
            "defaultProps": Object {
              "resizeMode": "cover",
            },
            "displayName": "FastImage",
            "preload": [Function],
            "priority": Object {
              "high": "high",
              "low": "low",
              "normal": "normal",
            },
            "propTypes": Object {
              "accessibilityActions": [Function],
              "accessibilityComponentType": [Function],
              "accessibilityElementsHidden": [Function],
              "accessibilityHint": [Function],
              "accessibilityIgnoresInvertColors": [Function],
              "accessibilityLabel": [Function],
              "accessibilityLiveRegion": [Function],
              "accessibilityRole": [Function],
              "accessibilityStates": [Function],
              "accessibilityTraits": [Function],
              "accessibilityViewIsModal": [Function],
              "accessible": [Function],
              "collapsable": [Function],
              "fallback": [Function],
              "hitSlop": [Function],
              "importantForAccessibility": [Function],
              "nativeID": [Function],
              "needsOffscreenAlphaCompositing": [Function],
              "onAccessibilityAction": [Function],
              "onAccessibilityTap": [Function],
              "onError": [Function],
              "onLayout": [Function],
              "onLoad": [Function],
              "onLoadEnd": [Function],
              "onLoadStart": [Function],
              "onMagicTap": [Function],
              "onMoveShouldSetResponder": [Function],
              "onMoveShouldSetResponderCapture": [Function],
              "onProgress": [Function],
              "onResponderGrant": [Function],
              "onResponderMove": [Function],
              "onResponderReject": [Function],
              "onResponderRelease": [Function],
              "onResponderTerminate": [Function],
              "onResponderTerminationRequest": [Function],
              "onStartShouldSetResponder": [Function],
              "onStartShouldSetResponderCapture": [Function],
              "pointerEvents": [Function],
              "removeClippedSubviews": [Function],
              "renderToHardwareTextureAndroid": [Function],
              "shouldRasterizeIOS": [Function],
              "source": [Function],
              "style": [Function],
              "testID": [Function],
              "tintColor": [Function],
            },
            "render": [Function],
            "resizeMode": Object {
              "center": "center",
              "contain": "contain",
              "cover": "cover",
              "stretch": "stretch",
            },
          },
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "bold": true,
            "children": "£10 voucher",
            "style": Object {
              "color": "rgb(51,51,51)",
              "fontSize": 30,
              "marginBottom": 8,
              "marginTop": 28,
            },
          },
          "ref": null,
          "rendered": "£10 voucher",
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": "yucoin x 20",
            "style": Object {
              "color": "rgb(51,51,51)",
              "fontSize": 28,
            },
          },
          "ref": null,
          "rendered": "yucoin x 20",
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`UnlockedOverlay should render with settings 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <UnlockedOverlay
    code="abcdefg"
    cost={20}
    rewardCurrency="GBP"
    rewardValue={10}
    settings={
      Object {
        "__typename": "RewardUiSettings",
        "alertCancelLabel": null,
        "alertHeading": null,
        "alertOkLabel": null,
        "alertSubheading": null,
        "ctaLabel": null,
        "id": "TEST_ID",
        "logoHeight": 1234,
        "logoWidth": 1234,
        "offerHeading": null,
        "offerSubheading": null,
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <ForwardRef
          resizeMode="contain"
          source={
            Object {
              "uri": "https://res.cloudinary.com/yu-life/image/upload/c_fit,h_2468,w_2468/v1/reward/logo/abcdefg_3x.png",
            }
          }
          style={
            Object {
              "height": 1234,
              "width": 1234,
            }
          }
        />,
        <YuText
          bold={true}
          style={
            Object {
              "color": "rgb(51,51,51)",
              "fontSize": 30,
              "marginBottom": 8,
              "marginTop": 28,
            }
          }
        >
          £10 voucher
        </YuText>,
        <YuText
          style={
            Object {
              "color": "rgb(51,51,51)",
              "fontSize": 28,
            }
          }
        >
          yucoin x 20
        </YuText>,
      ],
      "style": Object {
        "alignItems": "flex-start",
        "backgroundColor": "#FFFFFF",
        "flexDirection": "column",
        "height": 300,
        "justifyContent": "flex-start",
        "opacity": 0.92,
        "paddingLeft": 30,
        "paddingTop": 40,
        "width": 310,
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "resizeMode": "contain",
          "source": Object {
            "uri": "https://res.cloudinary.com/yu-life/image/upload/c_fit,h_2468,w_2468/v1/reward/logo/abcdefg_3x.png",
          },
          "style": Object {
            "height": 1234,
            "width": 1234,
          },
        },
        "ref": null,
        "rendered": null,
        "type": Object {
          "$$typeof": Symbol(react.forward_ref),
          "cacheControl": Object {
            "cacheOnly": "cacheOnly",
            "immutable": "immutable",
            "web": "web",
          },
          "defaultProps": Object {
            "resizeMode": "cover",
          },
          "displayName": "FastImage",
          "preload": [Function],
          "priority": Object {
            "high": "high",
            "low": "low",
            "normal": "normal",
          },
          "propTypes": Object {
            "accessibilityActions": [Function],
            "accessibilityComponentType": [Function],
            "accessibilityElementsHidden": [Function],
            "accessibilityHint": [Function],
            "accessibilityIgnoresInvertColors": [Function],
            "accessibilityLabel": [Function],
            "accessibilityLiveRegion": [Function],
            "accessibilityRole": [Function],
            "accessibilityStates": [Function],
            "accessibilityTraits": [Function],
            "accessibilityViewIsModal": [Function],
            "accessible": [Function],
            "collapsable": [Function],
            "fallback": [Function],
            "hitSlop": [Function],
            "importantForAccessibility": [Function],
            "nativeID": [Function],
            "needsOffscreenAlphaCompositing": [Function],
            "onAccessibilityAction": [Function],
            "onAccessibilityTap": [Function],
            "onError": [Function],
            "onLayout": [Function],
            "onLoad": [Function],
            "onLoadEnd": [Function],
            "onLoadStart": [Function],
            "onMagicTap": [Function],
            "onMoveShouldSetResponder": [Function],
            "onMoveShouldSetResponderCapture": [Function],
            "onProgress": [Function],
            "onResponderGrant": [Function],
            "onResponderMove": [Function],
            "onResponderReject": [Function],
            "onResponderRelease": [Function],
            "onResponderTerminate": [Function],
            "onResponderTerminationRequest": [Function],
            "onStartShouldSetResponder": [Function],
            "onStartShouldSetResponderCapture": [Function],
            "pointerEvents": [Function],
            "removeClippedSubviews": [Function],
            "renderToHardwareTextureAndroid": [Function],
            "shouldRasterizeIOS": [Function],
            "source": [Function],
            "style": [Function],
            "testID": [Function],
            "tintColor": [Function],
          },
          "render": [Function],
          "resizeMode": Object {
            "center": "center",
            "contain": "contain",
            "cover": "cover",
            "stretch": "stretch",
          },
        },
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "bold": true,
          "children": "£10 voucher",
          "style": Object {
            "color": "rgb(51,51,51)",
            "fontSize": 30,
            "marginBottom": 8,
            "marginTop": 28,
          },
        },
        "ref": null,
        "rendered": "£10 voucher",
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": "yucoin x 20",
          "style": Object {
            "color": "rgb(51,51,51)",
            "fontSize": 28,
          },
        },
        "ref": null,
        "rendered": "yucoin x 20",
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <ForwardRef
            resizeMode="contain"
            source={
              Object {
                "uri": "https://res.cloudinary.com/yu-life/image/upload/c_fit,h_2468,w_2468/v1/reward/logo/abcdefg_3x.png",
              }
            }
            style={
              Object {
                "height": 1234,
                "width": 1234,
              }
            }
          />,
          <YuText
            bold={true}
            style={
              Object {
                "color": "rgb(51,51,51)",
                "fontSize": 30,
                "marginBottom": 8,
                "marginTop": 28,
              }
            }
          >
            £10 voucher
          </YuText>,
          <YuText
            style={
              Object {
                "color": "rgb(51,51,51)",
                "fontSize": 28,
              }
            }
          >
            yucoin x 20
          </YuText>,
        ],
        "style": Object {
          "alignItems": "flex-start",
          "backgroundColor": "#FFFFFF",
          "flexDirection": "column",
          "height": 300,
          "justifyContent": "flex-start",
          "opacity": 0.92,
          "paddingLeft": 30,
          "paddingTop": 40,
          "width": 310,
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "resizeMode": "contain",
            "source": Object {
              "uri": "https://res.cloudinary.com/yu-life/image/upload/c_fit,h_2468,w_2468/v1/reward/logo/abcdefg_3x.png",
            },
            "style": Object {
              "height": 1234,
              "width": 1234,
            },
          },
          "ref": null,
          "rendered": null,
          "type": Object {
            "$$typeof": Symbol(react.forward_ref),
            "cacheControl": Object {
              "cacheOnly": "cacheOnly",
              "immutable": "immutable",
              "web": "web",
            },
            "defaultProps": Object {
              "resizeMode": "cover",
            },
            "displayName": "FastImage",
            "preload": [Function],
            "priority": Object {
              "high": "high",
              "low": "low",
              "normal": "normal",
            },
            "propTypes": Object {
              "accessibilityActions": [Function],
              "accessibilityComponentType": [Function],
              "accessibilityElementsHidden": [Function],
              "accessibilityHint": [Function],
              "accessibilityIgnoresInvertColors": [Function],
              "accessibilityLabel": [Function],
              "accessibilityLiveRegion": [Function],
              "accessibilityRole": [Function],
              "accessibilityStates": [Function],
              "accessibilityTraits": [Function],
              "accessibilityViewIsModal": [Function],
              "accessible": [Function],
              "collapsable": [Function],
              "fallback": [Function],
              "hitSlop": [Function],
              "importantForAccessibility": [Function],
              "nativeID": [Function],
              "needsOffscreenAlphaCompositing": [Function],
              "onAccessibilityAction": [Function],
              "onAccessibilityTap": [Function],
              "onError": [Function],
              "onLayout": [Function],
              "onLoad": [Function],
              "onLoadEnd": [Function],
              "onLoadStart": [Function],
              "onMagicTap": [Function],
              "onMoveShouldSetResponder": [Function],
              "onMoveShouldSetResponderCapture": [Function],
              "onProgress": [Function],
              "onResponderGrant": [Function],
              "onResponderMove": [Function],
              "onResponderReject": [Function],
              "onResponderRelease": [Function],
              "onResponderTerminate": [Function],
              "onResponderTerminationRequest": [Function],
              "onStartShouldSetResponder": [Function],
              "onStartShouldSetResponderCapture": [Function],
              "pointerEvents": [Function],
              "removeClippedSubviews": [Function],
              "renderToHardwareTextureAndroid": [Function],
              "shouldRasterizeIOS": [Function],
              "source": [Function],
              "style": [Function],
              "testID": [Function],
              "tintColor": [Function],
            },
            "render": [Function],
            "resizeMode": Object {
              "center": "center",
              "contain": "contain",
              "cover": "cover",
              "stretch": "stretch",
            },
          },
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "bold": true,
            "children": "£10 voucher",
            "style": Object {
              "color": "rgb(51,51,51)",
              "fontSize": 30,
              "marginBottom": 8,
              "marginTop": 28,
            },
          },
          "ref": null,
          "rendered": "£10 voucher",
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": "yucoin x 20",
            "style": Object {
              "color": "rgb(51,51,51)",
              "fontSize": 28,
            },
          },
          "ref": null,
          "rendered": "yucoin x 20",
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;
